2009-06-05  Antti Koivisto  <antti@apple.com>

        Try to fix Windows (and possibly other platforms) build.

        Restore ResourceResponseBase::lastModifiedDate() and setLastModifiedDate() removed in previous commit.
        for now since PluginStream used on some platforms expects them and calculations differ from plain 
        Last-modified header value.
        
        Also include <wtf/MathExtras.h> to get isfinite().

        * platform/network/ResourceResponseBase.cpp:
        (WebCore::ResourceResponseBase::adopt):
        (WebCore::ResourceResponseBase::copyData):
        (WebCore::ResourceResponseBase::setLastModifiedDate):
        (WebCore::ResourceResponseBase::lastModifiedDate):
        * platform/network/ResourceResponseBase.h:
        * platform/network/cf/ResourceResponseCFNet.cpp:
        (WebCore::ResourceResponse::platformLazyInit):

2009-06-03  Antti Koivisto  <antti@apple.com>

        Reviewed by Dave Kilzer.

        https://bugs.webkit.org/show_bug.cgi?id=13128
        Safari not obeying cache header
        
        Implement RFC 2616 cache expiration calculations in WebKit instead of
        relying on the networking layer.

        * ForwardingHeaders/runtime/DateMath.h: Added.
        * WebCore.base.exp:
        * loader/Cache.cpp:
        (WebCore::Cache::revalidationSucceeded):
        * loader/CachedResource.cpp:
        (WebCore::CachedResource::CachedResource):
        (WebCore::CachedResource::isExpired):
        (WebCore::CachedResource::currentAge):
        (WebCore::CachedResource::freshnessLifetime):
        (WebCore::CachedResource::setResponse):
        (WebCore::CachedResource::updateResponseAfterRevalidation):
        (WebCore::CachedResource::mustRevalidate):
        * loader/CachedResource.h:
        * platform/network/ResourceResponseBase.cpp:
        (WebCore::ResourceResponseBase::ResourceResponseBase):
        (WebCore::ResourceResponseBase::adopt):
        (WebCore::ResourceResponseBase::copyData):