@@ -37,7 +37,7 @@ const SimpleFontData* FontCache::getFontDataForCharacters(const Font& font, cons
 {
 #if defined(USE_FREETYPE)
     FcResult fresult;
-    FontPlatformData* prim = const_cast<FontPlatformData*>(&font.primaryFont()->m_font);
+    FontPlatformData* prim = const_cast<FontPlatformData*>(&font.primaryFont()->platformData());
 
     if (!prim->m_fallbacks)
         prim->m_fallbacks = FcFontSort(NULL, prim->m_pattern, FcTrue, NULL, &fresult);
